# kdam

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCS.md  README.md
.github/workflows/: tests.yml
bench/: bench.py
examples/: animations.rs  bar_custom_animation.rs  bar_input.rs  bar_multi_thread.rs  bar_nested.rs  bar_rich.rs  bar_simple.rs  bar_template.rs  bar_unknown.rs  bar_wrap.rs  bench_with_python.rs  coloured.rs  concurrent_bars.rs  description_and_additional_stats.rs  exp_monitor_mode.rs  file_buffer.rs  file_io.rs  in_between.rs  iterator_wrap.rs  main.rs  manual_bar.rs  misc_coloured.rs  misc_file_copy.rs  misc_fira_code.rs  misc_max_fps.rs  misc_monitor_mode.rs  misc_row_manager.rs  misc_row_manager_leave.rs  misc_spinner.rs  monitor_mode.rs  msg_between.rs  msg_simple.rs  msg_write.rs  multiple.rs  nested.rs  nested_bars.rs  redirect_output.rs  rich.rs  showcase_animations.rs  showcase_bench.rs  (+7 more)
examples/coloured/: gradient.rs  solid.rs
examples/download_file/: Cargo.toml
examples/download_file/src/: main.rs
examples/ffpb/: Cargo.toml
examples/ffpb/src/: main.rs
examples/file_download/: Cargo.toml
examples/file_download/src/: main.rs
examples/messages/: between.rs  input.rs  simple.rs  write.rs
examples/miscellaneous/: custom.rs  file_copy.rs  inverse_unit.rs  max_fps.rs  monitor_mode.rs  redirect_output.rs
examples/miscellaneous/file_download/: Cargo.toml
examples/miscellaneous/file_download/src/: main.rs
examples/multiple/: row_manager_clean.rs  row_manager_keep.rs
examples/showcase/: animations.rs  fira_code.rs  spinner.rs
kdam/: CHANGELOG.md  Cargo.toml  DOCS.md  README.md
kdam/examples/: rich.rs  simple.rs  template.rs  unknown.rs
kdam/examples/coloured/: gradient.rs  solid.rs
kdam/examples/messages/: between.rs  input.rs  simple.rs  write.rs
kdam/examples/miscellaneous/: custom.rs  file_copy.rs  inverse_unit.rs  max_fps.rs  monitor_mode.rs  rayon.rs  redirect_output.rs
kdam/examples/miscellaneous/file_download/: Cargo.toml
kdam/examples/miscellaneous/file_download/src/: main.rs
kdam/examples/multiple/: nested.rs  row_manager_clean.rs  row_manager_keep.rs  thread.rs
kdam/examples/notebook/: Cargo.toml  notebook.ipynb
kdam/examples/notebook/src/: lib.rs
kdam/examples/showcase/: animations.rs  fira_code.rs  spinner.rs
kdam/src/: format.rs  lib.rs  spinner.rs  utils.rs
kdam/src/rich/: bar.rs  mod.rs  styles.rs
kdam/src/std/: bar.rs  extension.rs  iterator.rs  manager.rs  mod.rs  monitor.rs  notebook.rs  styles.rs
kdam/src/term/: colours.rs  mod.rs  writer.rs
kdam_cli/: Cargo.toml
kdam_cli/src/: main.rs
kdam_derive/: CHANGELOG.md  Cargo.toml  README.md
kdam_derive/src/: lib.rs
showcase/: stats.rs
src/: bar.rs  fmt_data.rs  format.rs  internal.rs  iterator.rs  iterator_bar.rs  lib.rs  lock.rs  macros.rs  manager.rs  monitor.rs  multi_bar.rs  prelude.rs  rich.rs  std_bar.rs  styles.rs  term.rs  tqdm_macro.rs  utils.rs
src/progress/: bar.rs  extensions.rs  iterator.rs  macros.rs  methods.rs  mod.rs  rich.rs
src/rich/: bar.rs  mod.rs  styles.rs
src/std/: bar.rs  extension.rs  mod.rs  monitor.rs  styles.rs
src/styles/: animation.rs  format.rs  mod.rs  rich.rs  spinner.rs
src/term/: colours.rs  env.rs  mod.rs  string.rs  writer.rs
src/thread/: manager.rs  mod.rs  monitor.rs
