[package]
name = "kdam"
version = "0.2.4"
description = "Ultimate console progress bar for Rust"
authors = ["clitic <clitic21@gmail.com>"]
repository = "https://github.com/clitic/kdam"
documentation = "https://docs.rs/kdam"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cli", "progress", "progressbar", "pb"]
categories = ["command-line-interface"]
exclude = ["images", ".github"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminal_size = "0.2"
unicode-segmentation = "1.9"
formatx = "0.1.4"
colorgrad = { version = "0.6", optional = true }

[features]
gradient = ["dep:colorgrad"]

[workspace]
members = ["examples/miscellaneous/file_download"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "coloured_gradient"
path = "examples/coloured/gradient.rs"
required-features = ["gradient"]

[[example]]
name = "coloured_solid"
path = "examples/coloured/solid.rs"

[[example]]
name = "msg_between"
path = "examples/messages/between.rs"

[[example]]
name = "msg_input"
path = "examples/messages/input.rs"

[[example]]
name = "msg_simple"
path = "examples/messages/simple.rs"

[[example]]
name = "msg_write"
path = "examples/messages/write.rs"

[[example]]
name = "misc_file_copy"
path = "examples/miscellaneous/file_copy.rs"

[[example]]
name = "misc_max_fps"
path = "examples/miscellaneous/max_fps.rs"

[[example]]
name = "misc_monitor_mode"
path = "examples/miscellaneous/monitor_mode.rs"

[[example]]
name = "misc_redirect_output"
path = "examples/miscellaneous/redirect_output.rs"

[[example]]
name = "multi_nested"
path = "examples/multiple/nested.rs"

[[example]]
name = "multi_row_manager_clean"
path = "examples/multiple/row_manager_clean.rs"

[[example]]
name = "multi_row_manager_keep"
path = "examples/multiple/row_manager_keep.rs"

[[example]]
name = "multi_thread"
path = "examples/multiple/thread.rs"

[[example]]
name = "showcase_animations"
path = "examples/showcase/animations.rs"

[[example]]
name = "showcase_fira_code"
path = "examples/showcase/fira_code.rs"

[[example]]
name = "showcase_spinner"
path = "examples/showcase/spinner.rs"
