[package]
authors = ["clitic <clitic21@gmail.com>"]
categories = ["command-line-interface"]
description = "A console progress bar library for Rust. (inspired by tqdm & rich.progress)"
documentation = "https://docs.rs/kdam"
edition = "2021"
keywords = ["colors", "cli", "pb", "progress", "progressbar"]
license = "MIT OR Apache-2.0"
name = "kdam"
readme = "README.md"
repository = "https://github.com/clitic/kdam/tree/main/kdam"
version = "0.6.1"

[dependencies]
colorgrad = { version = "0.7", optional = true }
formatx = { version = "0.2.2", optional = true }
kdam_derive = { version = "0.1.0", path = "../kdam_derive", optional = true }
pyo3 = { version = "0.22", optional = true }
rayon = { version = "1.10", optional = true }
terminal_size = "0.4"
unicode-segmentation = { version = "1", optional = true }
unicode-width = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Console"] }

[features]
derive = ["dep:kdam_derive"]
gradient = ["dep:colorgrad"]
notebook = ["dep:pyo3"]
rayon = ["dep:rayon"]
rich = ["derive"]
spinner = []
template = ["dep:formatx"]
unicode = ["dep:unicode-segmentation", "dep:unicode-width"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "coloured_gradient"
path = "examples/coloured/gradient.rs"
required-features = ["template", "gradient"]

[[example]]
name = "coloured_solid"
path = "examples/coloured/solid.rs"

[[example]]
name = "msg_between"
path = "examples/messages/between.rs"

[[example]]
name = "msg_input"
path = "examples/messages/input.rs"

[[example]]
name = "msg_simple"
path = "examples/messages/simple.rs"

[[example]]
name = "msg_write"
path = "examples/messages/write.rs"

[[example]]
name = "misc_custom"
path = "examples/miscellaneous/custom.rs"
required-features = ["derive"]

[[example]]
name = "misc_file_copy"
path = "examples/miscellaneous/file_copy.rs"

[[example]]
name = "misc_inverse_unit"
path = "examples/miscellaneous/inverse_unit.rs"

[[example]]
name = "misc_max_fps"
path = "examples/miscellaneous/max_fps.rs"

[[example]]
name = "misc_monitor_mode"
path = "examples/miscellaneous/monitor_mode.rs"

[[example]]
name = "misc_rayon"
path = "examples/miscellaneous/rayon.rs"
required-features = ["rayon"]

[[example]]
name = "misc_redirect_output"
path = "examples/miscellaneous/redirect_output.rs"

[[example]]
name = "multi_nested"
path = "examples/multiple/nested.rs"

[[example]]
name = "multi_row_manager_clean"
path = "examples/multiple/row_manager_clean.rs"

[[example]]
name = "multi_row_manager_keep"
path = "examples/multiple/row_manager_keep.rs"

[[example]]
name = "multi_thread"
path = "examples/multiple/thread.rs"

[[example]]
name = "showcase_animations"
path = "examples/showcase/animations.rs"

[[example]]
name = "showcase_fira_code"
path = "examples/showcase/fira_code.rs"

[[example]]
name = "showcase_spinner"
path = "examples/showcase/spinner.rs"
required-features = ["spinner"]

[[example]]
name = "rich"
path = "examples/rich.rs"
required-features = ["rich", "spinner"]

[[example]]
name = "template"
path = "examples/template.rs"
required-features = ["spinner", "template"]
