[package]
name = "download_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["stream"] }
futures-util = "0.3.14"
tokio = { version = "1.13.0", features = ["full"] }
kdam = { path = "../.." }
