[package]
name = "file_download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
tokio = { version = "1.20", features = ["full"] }
kdam = { path = "../../.." }
